[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/DeckBuilder.gd" type="Script" id=1]
[ext_resource path="res://UI/DeckBuilder/CardCollection.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Gameplay/CenteredCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://Textures/UI/DeckBuilder/DeckBuilderBackgroundBlood.png" type="Texture" id=4]
[ext_resource path="res://Textures/Audio/EverydayMelancholia.ogg" type="AudioStream" id=5]
[ext_resource path="res://UI/Gameplay/RotationFrame.tscn" type="PackedScene" id=6]

[node name="DeckBuilder" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="Background"]
texture = ExtResource( 4 )

[node name="CenteredCamera" parent="Background" instance=ExtResource( 3 )]
scale = Vector2( 10, 10 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="Background"]
stream = ExtResource( 5 )

[node name="GameArea" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="Control" parent="GameArea"]
margin_top = 270.0
margin_bottom = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardCollection" parent="GameArea/Player1" instance=ExtResource( 2 )]
visible = false

[node name="Player2" type="Control" parent="GameArea"]
margin_top = -270.0
margin_bottom = -270.0
rect_rotation = -180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardCollection" parent="GameArea/Player2" instance=ExtResource( 2 )]
visible = false

[node name="Timers" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotationFrame" parent="Timers" instance=ExtResource( 6 )]

[node name="EnterGameplayTimer" type="Timer" parent="Timers"]
wait_time = 0.12

[connection signal="timeout" from="Timers/RotationFrame" to="." method="_on_RotationFrame_timeout"]
[connection signal="timeout" from="Timers/EnterGameplayTimer" to="." method="_on_EnterGameplayTimer_timeout"]
